--- a/dairy/xxy/2019-4.md
+++ b/dairy/xxy/2019-4.md
@@ -1,3 +1,13 @@
 # 2019-4-25
 
 增加头部导航栏和轮播图。导航栏与轮播图js产生冲突，只有先调用的js能生效。轮播图切换不够平滑，切换的tab还没有实现。
+
+
+
+# 2019-4-26
+
+使用Bootstrap框架重构了网页，实现了响应式布局。
+
+完成了导航栏、搜索模块、轮播图、卡片、トピック模块以及footer。
+
+语言切换、新闻模块还未实现。
