更新日志，增加sql文件

--- a/dairy/msy/2019-4.md
+++ b/dairy/msy/2019-4.md
@@ -3,3 +3,9 @@
 ## 2019-4-25
 建立本仓库，用于存储进度信息和代码草稿。
 
+## 2019-4-26
+建立MySQL数据表草稿。
+
+## 2019-4-27
+建立测试站点，部署git和React框架。
+### 测试方法：在服务器上 cd /home/uftp/Bizplus, 再npm run build, 再service nginx restart。
