--- a/dairy/xq/2019-4.md
+++ b/dairy/xq/2019-4.md
@@ -42,10 +42,24 @@
 
 ##### 2019.4.28
 
-设计方案不合格，4..28讨论且实施第二套设计方案；
+设计方案不合格，4.28讨论且实施第二套设计方案；
 
 +header
 
 +carousal (解决轮播图右侧有留白的问题)
 
 +card
+
+
+
+##### 2019.4.29
+
+继续设计制作第二套设计方案;
+
+*header (优化样式)
+
+*carousal (优化样式)
+
++about us
+
++work-card
