--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -28,3 +28,11 @@ about_our_company = 会社について
 a_plus_for_your_business = ビジネスをさらに強力にする
 introduction = Bizplus株式会社は2015年9月に設立されました。\n中国をメインとした技術者によるソフトウェア開発企業です。\n中国、日本での開発経験を有するPG、SE、BSEを擁しお客様のニーズに合わせた高品質なシステムを開発、ご提供致します。\nお客様に寄り添い、お客様とWIN-WINの関係を築けますよう、\n誠心誠意努力し事業を推進して参ります。
 learn_more = もっと見る
+profession = 職業
+efficient = 効率
+quality = 品質
+rich_variety_of_technologies = さまざまな技術
+rich_variety_of_technologies_1 = Oracle Gold(10g, 11g)、PL/SQL Silver、Java Silverなど
+rich_variety_of_technologies_2 = "Java、C / C++ / C#、.Netなど"
+rich_variety_of_technologies_3 = ORACLE、SQL SERVER、DB2など
+our_services = 提供している
