--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -28,3 +28,10 @@ about_our_company = 关于我们
 a_plus_for_your_business = 使您的商业如虎添翼
 introduction = Bizplus，为了顾客的业务推进以及业务支持而提供了大量外国技术人员。\n在2015年，从取得特定劳动派遣事业许可到现在，\n一直在日本的IT领域开展着外国技术人员的派遣业务。\n派遣内容：SE、PG、BSE\n派遣地点：东京、大阪、名古屋、神户、长野、滨松
 learn_more = 了解更多
+profession = 专业
+efficient = 高效
+quality = 高质
+rich_variety_of_technologies = 丰富的技术种类
+rich_variety_of_technologies_1 = Oracle Gold(10g, 11g)、PL/SQL Silver、Java Silver...
+rich_variety_of_technologies_2 = "Java、C / C++ / C#、.Net..."
+rich_variety_of_technologies_3 = ORACLE、SQL SERVER、DB2...
