--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -7,7 +7,7 @@ representative_s_greetings = Representative’s Greetings
 privacy_policy = Privacy Policy
 organizational_chart = Organizational Chart
 access = Access
-business_field = Business Field
+business_field = Business
 business_summary = Business Summary
 quality_control = Quality Control
 project_management = Project Management
@@ -28,3 +28,10 @@ about_our_company = ABOUT OUR COMPANY
 a_plus_for_your_business = A Plus For Your Business
 introduction = Bizplus Corporation was established in September 2015.\nIt is a software development company by technicians mainly in China.\nWith the development experience in China and Japan \nwe develop PG SE and BSE and provide high quality system tailored to customer’s needs.Stay closer to the customer we will work hard in good faith efforts to promote the business so that we can build a relationship with the customer to WIN-WIN.
 learn_more = LEARN MORE
+profession = profession
+efficient = efficient
+quality = quality
+rich_variety_of_technologies = Rich Variety of Technologies
+rich_variety_of_technologies_1 = Oracle Gold(10g, 11g), PL/SQL Silver, Java Silver...
+rich_variety_of_technologies_2 = "Java, C / C++ / C#, .Net..."
+rich_variety_of_technologies_3 = ORACLE, SQL SERVER, DB2...
