增加业务说明i18n文字

--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -13,8 +13,11 @@ quality_control = Quality Control
 project_management = Project Management
 development_language_and_environment = Development Language and Environment
 foreign_temporary_staffing_business = Foreign Temporary Staffing Business
+foreign_temporary_staffing_business_summary = Respond your business promotion and support in our company.
 commission_proposal = Commission Proposal
+commission_proposal_summary = Respond to any customers’ request, propose optimal solutions, and provide high level (high quality · High technology) service.
 other_business = Other Business
+other_business_summary = Robot development, consulting business, Human resource education business.
 development_performance = Development Performance
 company_culture = Culture
 welfare = Welfare
@@ -33,5 +36,7 @@ efficient = efficient
 quality = quality
 rich_variety_of_technologies = Rich Variety of Technologies
 rich_variety_of_technologies_1 = Oracle Gold(10g, 11g), PL/SQL Silver, Java Silver...
-rich_variety_of_technologies_2 = "Java, C / C++ / C#, .Net..."
+rich_variety_of_technologies_2 = Java, C / C++ / C#, .Net...
 rich_variety_of_technologies_3 = ORACLE, SQL SERVER, DB2...
+our_services = our services
+our_services_1_title = our services
