--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -13,8 +13,11 @@ quality_control = 品質管理
 project_management = プロジェクト管理
 development_language_and_environment = 開発言語と環境
 foreign_temporary_staffing_business = 外国人材派遣事業
+foreign_temporary_staffing_business_summary = 日本のIT分野において外国人技術者の派遣業務を展開しています。
 commission_proposal = 受託開発
+commission_proposal_summary = 経験豊富なPM、開発チームを活用することにより、お客様の多様なニーズに応え、 最適なソリューションを提案し、業務理解・上流設計・受入テスト等までに、レベルの高い（高品質・高技術）サービスを提供します。
 other_business = その他事業概要
+other_business_summary = ロボット開発、コンサルタント、人材教育事業。
 development_performance = 開発実績
 company_culture = 社風について
 welfare = 福利厚生
@@ -33,6 +36,6 @@ efficient = 効率
 quality = 品質
 rich_variety_of_technologies = さまざまな技術
 rich_variety_of_technologies_1 = Oracle Gold(10g, 11g)、PL/SQL Silver、Java Silverなど
-rich_variety_of_technologies_2 = "Java、C / C++ / C#、.Netなど"
+rich_variety_of_technologies_2 = Java、C / C++ / C#、.Netなど
 rich_variety_of_technologies_3 = ORACLE、SQL SERVER、DB2など
-our_services = 提供している
+our_services = サービス
