--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -13,8 +13,11 @@ quality_control = 品质管理
 project_management = 项目管理
 development_language_and_environment = 开发语言和环境
 foreign_temporary_staffing_business = 外国人才派遣事业
+foreign_temporary_staffing_business_summary = 从取得特定劳动派遣事业许可到现在，一直在日本的IT领域开展着外国技术人员的派遣业务。
 commission_proposal = 委托方案
+commission_proposal_summary = 具备经验丰富的PM，开发团队，根据客户的多种需求，提供最佳的解决方案，从业务理解·上游设计到验收测试等，提供高水平的（高品质、高技术）服务。
 other_business = 其他业务
+other_business_summary = 机器人开发、咨询业务、人才教育。
 development_performance = 开发实绩
 company_culture = 企业文化
 welfare = 员工福利
@@ -33,5 +36,6 @@ efficient = 高效
 quality = 高质
 rich_variety_of_technologies = 丰富的技术种类
 rich_variety_of_technologies_1 = Oracle Gold(10g, 11g)、PL/SQL Silver、Java Silver...
-rich_variety_of_technologies_2 = "Java、C / C++ / C#、.Net..."
+rich_variety_of_technologies_2 = Java、C / C++ / C#、.Net...
 rich_variety_of_technologies_3 = ORACLE、SQL SERVER、DB2...
+our_services = 服务
