--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -45,7 +45,7 @@ work_2 = X company's shopping actuarial system
 work_3 = A company's logistics system
 work_4 = B company member training
 work_5 = Help C company get through the storm
-work_6 = regular cooperation with company D
+work_6 = Regular cooperation with company D
 faq_by_form = Inquiry in form
 faq_by_form_summary = Use the inquiry form for quote requests, inquiries and questions.
 faq_by_tel = Contact by phone
