--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -39,6 +39,7 @@ rich_variety_of_technologies_1 = Oracle Gold(10g, 11g)、PL/SQL Silver、Java Si
 rich_variety_of_technologies_2 = Java、C / C++ / C#、.Netなど
 rich_variety_of_technologies_3 = ORACLE、SQL SERVER、DB2など
 our_services = サービス
+our_works = 私たちの成果
 work_1 = N社の販売システム
 work_2 = X社のショッピング決算システム
 work_3 = A社の物流システム
@@ -50,7 +51,7 @@ faq_by_form_summary = お見積り依頼やご相談・ご質問は お問い合
 faq_by_tel = お電話でのお問い合わせ
 faq_by_tel_summary = お急ぎの方や詳しく話を聞きたい方は お電話ください。
 reception_time = 受付時間9:45～18:15(土日、祝祭日を除く)
-our_news = 私たちのニュース
+our_news = ニュース
 news_1_label = セミナー
 news_1_title = 次の極端な開発の方向性を決めるためのセミナーを開催しました
 news_2_label = 人事異動
