--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -63,9 +63,21 @@ news_4_title = Notice about questions about recent vacations
 news_5_label = Notification
 news_5_title = Headquarters relocation notice
 our_events_blog = our events / blog
-our_events_blog = our activities
 event_1_title = Notification of working days during Golden Week
 event_2_title = About the HP renewal business of February, 2019
 event_3_title = New Year holidays
 event_4_title = Recruitment of staff! ! 【Career adoption】
 our_team = our team
+team_1_title = team event
+team_1_content = Team event summary
+team_2_title = When resting
+team_2_content = what to do
+team_3_title = study together
+team_3_content = To become better
+address = Company location
+address_1 = No. 1 to 5 in Tokucho, Shinjuku-ku, Tokyo
+address_2 = 2nd floor of the 5th Hattori Bldg.
+tel = TEL: 03-6709-8260
+fax = fax: 03-6709-8261
+info = info
+
