--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -68,4 +68,15 @@ event_2_title = 2019年2月3月のHP更新業務について
 event_3_title = 年末年始休業期間
 event_4_title = スタッフ募集！！【キャリア採用】
 our_team = 私たちのチーム
-
+team_1_title = チームイベント
+team_1_content = チームイベントまとめ
+team_2_title = 休む時
+team_2_content = 何をしようかな
+team_3_title = 一緒に勉強
+team_3_content = つよくになるなめに
+address = 公司所在地
+address_1 = 東京都新宿区富久町1番5号
+address_2 = 富久町第5服部ビル2階
+tel = TEL : 03-6709-8260
+fax = FAX : 03-6709-8261
+info = information
