--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -68,3 +68,15 @@ event_2_title = 关于2019年2月的HP续订业务
 event_3_title = 新年假期
 event_4_title = 招聘员工！！ 【职业收养】
 our_team = 我们的团队
+team_1_title =　团队活动
+team_1_content =　团队活动摘要
+team_2_title =　休息时
+team_2_content =　做什么比较好呢
+team_3_title = 一起学习
+team_3_content = 一起变得更强
+address = 公司地址
+address_1 = 东京都新宿区东町1号至5号
+address_2 = 富久町第5服部大楼2层
+tel = 电话 : 03-6709-8260
+fax = 传真 : 03-6709-8261
+info = info
