移动端以外i18n基本完成

--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -79,5 +79,4 @@ address_1 = No. 1 to 5 in Tokucho, Shinjuku-ku, Tokyo
 address_2 = 2nd floor of the 5th Hattori Bldg.
 tel = TEL: 03-6709-8260
 fax = fax: 03-6709-8261
-info = info
-
+more = more
