缩短en_US的文本长度防止布局错误

--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -1,6 +1,6 @@
 language = English
 homepage = Home
-information = Information
+information = Info
 company_profile = Profile
 business_philosophy = Business Philosophy
 representative_s_greetings = Representative’s Greetings
