--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -11,8 +11,8 @@ business_field = Business
 business_summary = Business Summary
 quality_control = Quality Control
 project_management = Project Management
-development_language_and_environment = Development Language and Environment
-foreign_temporary_staffing_business = Foreign Temporary Staffing Business
+development_language_and_environment = Development Language & Environment
+foreign_temporary_staffing_business = Foreign Staffing Business
 foreign_temporary_staffing_business_summary = Respond your business promotion and support in our company.
 commission_proposal = Commission Proposal
 commission_proposal_summary = Respond to any customers’ request, propose optimal solutions, and provide high level (high quality · High technology) service.
@@ -71,7 +71,7 @@ our_team = our team
 team_1_title = team event
 team_1_content = Team event summary
 team_2_title = When resting
-team_2_content = what to do
+team_2_content = What to do
 team_3_title = study together
 team_3_content = To become better
 address = Company location
