--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -80,3 +80,5 @@ address_2 = 富久町第5服部ビル2階
 tel = TEL : 03-6709-8260
 fax = FAX : 03-6709-8261
 more = もっと詳しく
+carousel_title = あなたのビジネスに、プラスを
+carousel_content = Bizplus Corporationは2015年9月に設立されました。
