--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -81,3 +81,5 @@ tel = 电话 : 03-6709-8260
 fax = 传真 : 03-6709-8261
 info = info
 more = 详情
+carousel_title = 为您的事业献上一臂之力
+carousel_content = Bizplus株式会社创办于2015年9月
