--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -80,5 +80,6 @@ address_2 = 2nd floor of the 5th Hattori Bldg.
 tel = TEL: 03-6709-8260
 fax = fax: 03-6709-8261
 more = more
+carousel_title = A Plus For Your Business
 carousel_content = Bizplus Corporation was established in September 2015.
 
