--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -81,5 +81,9 @@ tel = 电话 : 03-6709-8260
 fax = 传真 : 03-6709-8261
 info = info
 more = 详情
-carousel_title = 为您的事业献上一臂之力
-carousel_content = Bizplus株式会社创办于2015年9月
+carousel_1_title = 为您的事业献上一臂之力
+carousel_1_content = Bizplus株式会社创办于2015年9月
+carousel_2_title = 使您的商业如虎添翼
+carousel_2_content = Bizplus株式会社创办于2015年9月
+carousel_3_title = 丰富的技术种类
+carousel_3_content = Bizplus株式会社创办于2015年9月
