--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -41,8 +41,8 @@ rich_variety_of_technologies_3 = ORACLE, SQL SERVER, DB2...
 our_services = our services
 our_works = our works
 work_1 = N company's sales system
-work_2 = X company's shopping actuarial system
-work_3 = A company's logistics system
+work_2 = X company's shopping actuarial system. 
+work_3 = A company's logistics system.
 work_4 = B company member training
 work_5 = Help C company get through the storm
 work_6 = Regular cooperation with company D
