--- a/demo/i18n/static/strings_ja_JP.properties
+++ b/demo/i18n/static/strings_ja_JP.properties
@@ -82,7 +82,7 @@ fax = FAX : 03-6709-8261
 more = もっと詳しく
 carousel_1_title = あなたのビジネスに、プラスを
 carousel_1_content = Bizplus Corporationは2015年9月に設立されました。
-carousel_2_title = Bizplus株式会社は2015年9月に設立されました。です。
+carousel_2_title = Bizplus株式会社は2015年9月に設立されました。
 carousel_2_content = 中国、日本での開発経験を有するPG、SE、BSEを擁しお添い。
 carousel_3_title = 中国をメインとした技術者によるソフトウェア開発企業
 carousel_3_content = 客様のニーズに合わせた高品質なシステムを開発、ご提供致します。\nお客様に寄り。
