菜单字段改变

--- a/demo/i18n/static/strings_en_US.properties
+++ b/demo/i18n/static/strings_en_US.properties
@@ -21,6 +21,7 @@ other_business_summary = Robot development, consulting business, Human resource 
 development_performance = Development Performance
 company_culture = Culture
 welfare = Welfare
+education = Education
 leisure_and_entertainment = Leisure and Entertainment
 medical_insurance = Medical Insurance
 recruitment_information = Recruitment
