--- a/demo/i18n/static/strings_zh_CN.properties
+++ b/demo/i18n/static/strings_zh_CN.properties
@@ -20,7 +20,8 @@ other_business = 其他业务
 other_business_summary = 机器人开发、咨询业务、人才教育
 development_performance = 开发实绩
 company_culture = 企业文化
-welfare = 员工福利
+welfare = 福利计划
+education = 社内教育
 leisure_and_entertainment = 休假和娱乐活动
 medical_insurance = 医疗保障
 recruitment_information = 招聘信息
